# astvcs

./: .gitignore  Cargo.toml  LICENSE  README.md
.cursor/skills/astvcs-add-tree-sitter-language/: SKILL.md
.cursor/skills/astvcs-develop/: SKILL.md
.cursor/skills/astvcs-develop/scripts/: benchmark-git.ps1  benchmark-git.sh  verify.ps1  verify.sh
.cursor/skills/astvcs-integration-tests/: SKILL.md
.cursor/skills/astvcs-integration-tests/references/: test-catalog.md
.cursor/skills/astvcs-output-ux/: SKILL.md
.cursor/skills/astvcs-output-ux/references/: sources.md
.cursor/skills/astvcs-structural-diff-merge/: SKILL.md
.cursor/skills/astvcs-structural-diff-merge/references/: fixtures.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: RELEASE.md  architecture.md  commands.md  git-integration.md
examples/: README.md  reset.ps1  reset.sh  run-demos.ps1  run-demos.sh
examples/go-eof-insert-demo/: .astvcsignore  .gitignore  version.go.base  version.go.ours  version.go.theirs
examples/identity-demo/: .gitignore  conflict.rs  core.rs  labels.rs
examples/merge-demo/: config.toml  lib.rs
examples/network-demo/: .gitignore
examples/same-file-demo/: sample.rs
examples/serve-demo/: .gitignore
examples/shallow-demo/: .gitignore
examples/workflow-demo/: core.rs  lib.rs  notes.txt  util.rs
src/: lib.rs  main.rs  trace.rs  unparser.rs
src/diff/: align.rs  ast_diff.rs  lcs.rs  mod.rs  path_rename.rs  text_diff.rs  view.rs
src/diff/view/: viewer.html
src/frontend/: binaryblob.rs  languages.rs  mod.rs  symlinkblob.rs  textblob.rs  treesitter.rs
src/graph/: dag.rs  edge.rs  mod.rs  mutation.rs  node.rs
src/intent/: mod.rs
src/merge/: language_merge_cases.rs  mod.rs
src/network/: api.rs  mod.rs  remote.rs  remote_serve.rs  serve.rs  ssh.rs  sync.rs  transport.rs
src/store/: atomic.rs  bisect.rs  blame.rs  blobs.rs  cherry_pick.rs  error.rs  format.rs  git_import.rs  history.rs  hooks.rs  identity.rs  integrity.rs  lock.rs  manifest.rs  merge_resolve.rs  mod.rs  pack.rs  reachability.rs  rebase.rs  repo.rs  scan_cache.rs  shallow.rs  staging.rs  stash.rs  tags.rs  tracked.rs  walk.rs  working.rs
tests/: diff_git.rs  git_drivers.rs  history_smoke.rs  integration.rs  props.rs
tests/common/: mod.rs
