[package]
name = "astvcs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "astvcs"
path = "src/lib.rs"

[[bin]]
name = "astvcs"
path = "src/main.rs"

[[bin]]
name = "astvcs-merge-driver"
path = "src/bin/merge_driver.rs"

[[bin]]
name = "astvcs-diff-driver"
path = "src/bin/diff_driver.rs"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
hex = "0.4.3"
ignore = "0.4.26"
regex = "1.12.4"
reqwest = { version = "0.13.4", features = ["blocking", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
similar = "3.1.1"
subtle = "2.6.1"
tiny_http = { version = "0.12.0", features = ["ssl-rustls"] }
tree-sitter = "0.26.9"
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24.2"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-gomod-orchard = "0.5.3"
tree-sitter-html = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-sequel = "0.3.11"
tree-sitter-swift = "0.7.3"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-yaml = "0.7.2"
tree-sitter-zig = "1.1.2"
zstd = "0.13.3"

[dev-dependencies]
proptest = "1.11.0"
rand = "0.10.2"
rcgen = "0.14.8"
tempfile = "3.27.0"
